# krita-comfyui

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  krita_comfyui.desktop  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.zed/: settings.json
krita_comfyui/: Manual.html  __init__.py  comfyui_client.py  comfyui_http_client.py  config.json  config.py  config_logging.py  krita_comfyui.py  krita_comfyui_settings.py  prompt_builder.py  worker.py  workflow_utils.py
krita_comfyui/comfy_client/: __init__.py  comfy_client.py  comfy_http_client.py  image_prompt.py  image_utils.py  workflow_utils.py
krita_comfyui/krita/: __init__.py
krita_comfyui/settings/: __init__.py  settings_dialog.py  workflow_form_builder.py
krita_comfyui/workers/: __init__.py  comfy_worker.py  worker.py
krita_comfyui/workflows/: qwen_mage_edit_inpaint.json  qwen_text_image.json
scripts/: create_release.py
tests/: __init__.py  conftest.py  test_comfy_worker.py  test_config.py  test_image_utils.py  test_prompt_builder.py  test_worker.py  test_workflow_form_builder.py
tests/comfy_client_tests/: __init__.py  test_comfy_http_client.py  test_image_utils.py  test_workflow_utils.py
tests/comfy_client_tests/data/: object_info.json  wf_1.json  wf_api_1.json  wf_api_nested_subgraph.json  wf_api_with_subgraph.json  wf_nested_subgraph.json  wf_with_subgraph.json
tests/workers_tests/: test_comfy_worker.py  test_worker.py
