[project]
dynamic = ["version"]
name = "krita_comfyui"
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
line-length = 100
preview = true
extend-exclude = [
    "krita_comfyui/websockets"
]

[tool.ruff.lint]
ignore = ["E741"]

[tool.ty.src]
include = ["krita_comfyui", "tests"]
exclude = ["krita_comfyui/websockets"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[pytest]
plugins = ["qt"]